include_directories(${CMAKE_SOURCE_DIR}/include/)

add_executable(leetcode2 leetcode2.cpp)
add_test(leetcode2 ./leetcode2)
add_executable(leetcode21 leetcode21.cpp)
add_test(leetcode21 ./leetcode21)
add_executable(leetcode92 leetcode92.cpp)
add_test(leetcode92 ./leetcode92)
add_executable(leetcode142 leetcode142.cpp)
add_test(leetcode142 ./leetcode142)
add_executable(leetcode148 leetcode148.cpp)
add_test(leetcode148 ./leetcode148)
add_executable(leetcode147 leetcode147.cpp)
add_test(leetcode147 ./leetcode147)
add_executable(leetcode206 leetcode206.cpp)
add_test(leetcode206 ./leetcode206)
add_executable(leetcode445 leetcode445.cpp)
add_test(leetcode445 ./leetcode445)

