
add_executable(leetcode3 leetcode3.cpp)
add_executable(leetcode5 leetcode5.cpp)
add_executable(leetcode76 leetcode76.cpp)
add_executable(leetcode392 leetcode392.cpp)
add_executable(leetcode409 leetcode409.cpp)
add_executable(leetcode763 leetcode763.cpp)
add_executable(leetcode792 leetcode792.cpp)
add_executable(offer45 offer45.cpp)
add_executable(leetcode65 leetcode65.cpp)
add_executable(leetcode8 leetcode8.cpp)
add_executable(leetcode14 leetcode14.cpp)
add_executable(leetcode756 leetcode756.cpp)
add_executable(leetcode680 leetcode680.cpp)

