include_directories(${CMAKE_SOURCE_DIR}/include/)

add_executable(leetcode3 leetcode3.cpp)
add_test(leetcode3 ./leetcode3)
add_executable(leetcode5 leetcode5.cpp)
add_test(leetcode5 ./leetcode5)
add_executable(leetcode8 leetcode8.cpp)
add_test(leetcode8 ./leetcode8)
add_executable(leetcode14 leetcode14.cpp)
add_test(leetcode14 ./leetcode14)
add_executable(leetcode65 leetcode65.cpp)
add_test(leetcode65 ./leetcode65)
add_executable(leetcode76 leetcode76.cpp)
add_test(leetcode76 ./leetcode76)
add_executable(leetcode392 leetcode392.cpp)
add_test(leetcode392 ./leetcode392)
add_executable(leetcode409 leetcode409.cpp)
add_test(leetcode409 ./leetcode409)
add_executable(leetcode524 leetcode524.cpp)
add_test(leetcode524 ./leetcode524)
add_executable(leetcode680 leetcode680.cpp)
add_test(leetcode680 ./leetcode680)
add_executable(leetcode756 leetcode756.cpp)
# add_test(leetcode756 ./leetcode756)
add_executable(leetcode763 leetcode763.cpp)
add_test(leetcode763 ./leetcode763)
add_executable(leetcode792 leetcode792.cpp)
add_test(leetcode792 ./leetcode792)

add_executable(offer45 offer45.cpp)
add_test(offer45 ./offer45)