include_directories(${CMAKE_SOURCE_DIR}/include/)

add_executable(leetcode94 leetcode94.cpp)
add_test(leetcode94 ./leetcode94)
add_executable(leetcode95 leetcode95.cpp)
add_test(leetcode95 ./leetcode95)
add_executable(leetcode96 leetcode96.cpp)
add_test(leetcode96 ./leetcode96)
add_executable(leetcode98 leetcode98.cpp)
add_test(leetcode98 ./leetcode98)
add_executable(leetcode112 leetcode112.cpp)
add_test(leetcode112 ./leetcode112)
add_executable(leetcode144 leetcode144.cpp)
add_test(leetcode144 ./leetcode144)
add_executable(leetcode145 leetcode145.cpp)
add_test(leetcode145 ./leetcode145)
add_executable(leetcode235 leetcode235.cpp)
add_test(leetcode235 ./leetcode235)
add_executable(leetcode408 leetcode408.cpp)
add_test(leetcode408 ./leetcode408)
add_executable(leetcode538 leetcode538.cpp)
add_test(leetcode538 ./leetcode538)
add_executable(leetcode572 leetcode572.cpp)
add_test(leetcode572 ./leetcode572)