include_directories(${CMAKE_SOURCE_DIR}/include/)

add_executable(leetcode31 leetcode31.cpp)
add_test(leetcode31 ./leetcode31)

add_executable(leetcode46 leetcode46.cpp)
add_test(leetcode46 ./leetcode46)

add_executable(leetcode47 leetcode47.cpp)
add_test(leetcode47 ./leetcode47)

add_executable(leetcode996 leetcode996.cpp)
add_test(leetcode996 ./leetcode996)