include_directories(${CMAKE_SOURCE_DIR}/include/)

add_executable(leetcode75 leetcode75.cpp)
add_test(leetcode75 ./leetcode75)

add_executable(leetcode215 leetcode215.cpp)
add_test(leetcode215 ./leetcode215)

add_executable(leetcode912 leetcode912.cpp)
add_test(leetcode912 ./leetcode912)

add_executable(mianshi17 mianshi17.cpp)
add_test(mianshi17 ./mianshi17)
